# typewriter_gaem

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
engine/: Action.cpp  Action.hpp  AudioSystem.cpp  AudioSystem.hpp  Constants.hpp  Engine.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Identifiable.cpp  Identifiable.hpp  Interactive.hpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  TextEffect.cpp  TextEffect.hpp  action.cpp  action.h  audio_system.cpp  audio_system.h  audio_system.hpp  engine.h  engine.hpp  font_utils.cpp  font_utils.h  game.cpp  game.hpp  game_object.cpp  game_object.hpp  game_state.cpp  game_state.h  game_state.hpp  layer.cpp  layer.hpp  page.cpp  page.h  page.hpp  (+22 more)
engine/Components/: AnimatedMesh.cpp  AnimatedMesh.hpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Interactive.cpp  Interactive.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Mesh.cpp  Mesh.hpp  MouseInput.cpp  MouseInput.hpp  PlayerController.cpp  PlayerController.hpp  Transition.hpp
engine/Components/Page/: DecisionNode.cpp  DecisionNode.hpp  Dialog.cpp  Dialog.hpp  PageController.cpp  PageController.hpp  Paragraph.cpp  Paragraph.hpp  Printable.cpp  Printable.hpp  TextEffect.cpp  TextEffect.hpp
engine/Components/Translations/: Rotate.hpp  Scale.hpp  Translate.hpp  TranslateHorizontal.hpp  TranslateVertical.hpp
engine/Components/Visual/: Parallax.cpp  Parallax.hpp
engine/EventBus/: EventBus.hpp  Listeners.hpp  QueuedListeners.hpp  SynchronousListeners.h  SynchronousListeners.hpp
engine/Utilities/: Cached.hpp  General.cpp  General.hpp  Logger.cpp  Logger.hpp  NonCopyable.h  NonMovable.h  function.h
engine/animation/: animable.hpp  animation.hpp  scene_node_animation.hpp  translate.hpp
engine/components/: AnimatedMesh.cpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Interactive.cpp  Interactive.hpp  Mesh.cpp  Mesh.hpp  Transition.hpp
engine/components/page/: DecisionNode.cpp  DecisionNode.hpp  Dialog.cpp  Dialog.hpp  PageController.cpp  PageController.hpp  Paragraph.cpp  Paragraph.hpp  Printable.cpp  Printable.hpp
engine/components/translations/: Rotate.hpp  Scale.hpp  Translate.hpp  TranslateHorizontal.hpp  TranslateVertical.hpp
engine/event_bus/: EventBus.hpp  SynchronousListeners.hpp  callback_container.hpp  event_bus.hpp  listeners.hpp  synchronous_callback_container.hpp  synchronous_listeners.hpp
engine/printables/: center.cpp  center.h  dialog.cpp  dialog.h  dialog.hpp  paragraph.cpp  paragraph.h  paragraph.hpp  printable.cpp  printable.h  printable.hpp  printable_store.cpp  printable_store.h  printable_store.hpp
engine/story/: action.cpp  action.h  action.hpp  decision_node.cpp  decision_node.h  decision_node.hpp  story.cpp  story.h  story.hpp
engine/utilities/: Cached.hpp  General.hpp  NonCopyable.hpp  converters.cpp  converters.h  converters.hpp  general.cpp  general.h  general.hpp  text_buffer.cpp  text_buffer.h  text_buffer.hpp  tuples.hpp
res/configs/: page.json
